Se cambia la fuente de la imagen

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <section class="contenido">
             <p>Para hacer el cálculo de resistencias en paralelo se utiliza la siguiente fórmula: 
                 <br />
-                <img src="/imagenes/formulaResistenciaParalelo.png"/>
+                <!-- <img src="/imagenes/formulaResistenciaParalelo.png"/> -->
+                <img src="https://i.postimg.cc/2yCpNBqg/formula-Resistencia-Paralelo.png"/>
             </p>
             <form action="" id="valores-form">
                 <p>Ingresa los valores de las resistencias (solo se aceptan valores numéricos)</p>
